--- a/src/Header.css
+++ b/src/Header.css
@@ -1,33 +1,55 @@
-.Header{
-  display:grid;
+.Header {
+  display: grid;
   grid-template-areas: logo nav;
 }
 
-.Nav{
-  grid-area:nav;
+.Nav {
+  grid-area: nav;
   display: grid;
-  grid-template-rows: repeat(4,auto);
-  align-items: center;justify-items: center;position: absolute;top: 10%;left: 50%;transform:translate(-50%,-0%);
+  grid-template-rows: repeat(4, auto);
+  align-items: center;
+  justify-items: center;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -0%);
 }
 
-.Nav a,button{
-  margin-top: 15px;text-decoration: none;
+.Nav a,
+button {
+  margin-top: 15px;
+  text-decoration: none;
 }
 
-
-@media only screen and (min-width:400px){
-
-
-.Nav{
-  grid-area:nav;
-  display: grid;
-  grid-template-columns: repeat(4,auto);
-  align-items: center;justify-items: center;position: relative;margin-top: 0;
+.icon {
+  position: absolute;
+  color: red;
+  width: 100%;
+  right: 10px;
+  width: 20px;
+  height: px;
+  font-size: 1.5rem;
+  margin-top: -0px;
 }
 
+@media only screen and (min-width: 400px) {
+  .Nav {
+    grid-area: nav;
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    align-items: center;
+    justify-items: center;
+    position: relative;
+    margin-top: -20px;
+  }
 
-.Nav a,button{
-  margin-top: 15px;text-decoration: none;
-}
+  .Nav a,
+  nav button {
+    margin-top: 15px;
+    text-decoration: none;
+  }
 
+  .icon {
+    display: none;
+  }
 }
